# formatik

./: .gitignore  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md
docs/API/: currency_format.md
formatik/: __init__.py  bytes_format.py  currency_format.py  date_format.py  dollar_format.py  number_format.py  ordinal_format.py  percent_format.py  pvalue_format.py  scientific_format.py  utils.py
