[project]
name = "formatik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.6",
    "mkdocstrings>=0.28.2",
    "mkdocstrings-python>=1.16.2",
    "pymdown-extensions>=10.14.3",
    "ruff>=0.9.9",
]
